--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
+    "lucide-react": "^0.259.0",
+    "next": "^13.4.9",
     "postcss": "8.4.24",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   }
 }
